feat: scedule assign/cancel/confirm actions
