# app/Http/Controllers/ScheduleController.php
@@ -8,7 +8,12 @@ use DomainException;
 use App\Models\Schedule;
 use Illuminate\Http\Request;
 use Illuminate\Http\JsonResponse;
+use Illuminate\Support\Facades\URL;
 use Illuminate\Support\Facades\Hash;
+use App\Notifications\Schedules\Canceled;
+use App\Notifications\Schedules\Confirmed;
+use Illuminate\Support\Facades\Notification;
+use App\Notifications\Schedules\Confirmation;
 use Illuminate\Http\Resources\Json\JsonResource;
 use App\Http\Resources\Schedule\ScheduleResource;
 use App\Http\Requests\Schedule\StoreScheduleRequest;
@@ -176,28 +181,31 @@ class ScheduleController extends Controller
             // throw new DomainException('This user cannot be assigned as it doesn\'t have a pet registered', 400);
         }
 
-        $confirmation_token = Hash::make(new DateTime());
+        $now = new DateTime();
 
         $schedule->client_id = $user->id;
         $schedule->status = 'pending';
-        $schedule->confirmation_token = $confirmation_token;
         $schedule->save();
 
-        # todo: sendmail with confirmation token
+        $confirmationUrl = URL::temporarySignedRoute(
+            'schedule.confirm', now()->addMinutes(60), ['id' => $schedule->id]
+        );
+
+        Notification::send($schedule->client, new Confirmation($schedule, $confirmationUrl));
 
         return response()->json([
             'message' => 'Schedule successfully assigned'
         ], 200);
     }
     
-    public function confirm(int $id, string $hash): JsonResponse
+    public function confirm(int $id): JsonResponse
     {
         $schedule = Schedule::find($id);
 
         if( !$schedule ){
             throw new DomainException('Content not found', 204);
         }
-
+        
         if( !in_array($schedule->status, ['pending']) ) {
             return response()->json([
                 'message' =>  'This schedule cannot be confirmed as its status is no longer pending'
@@ -205,19 +213,17 @@ class ScheduleController extends Controller
             // throw new DomainException('This schedule cannot be confirmed as its status is no longer pending', 400);
         }
 
-        if( $schedule->confirmation_token != $hash){
-            return response()->json([
-                'message' =>  'Invalid confirmation token'
-            ], 400);
-            throw new DomainException('Invalid confirmation token', 400);
-        }
-
         $schedule->status = 'confirmed';
         $schedule->save();
 
-        # todo: send information mail to vet and user ;
+        Notification::send([
+            $schedule->client,
+            $schedule->vet
+        ], new Confirmed($schedule));
 
-        return response()->json([], 200);
+        return response()->json([
+            'message' => 'Schedule successfully confirmed'
+        ], 200);
     }
 
     /**
@@ -242,11 +248,11 @@ class ScheduleController extends Controller
     public function cancel(Request $request, int $id): JsonResponse
     {
         $schedule = Schedule::find($id);
-
+        
         if( !$schedule ){
             throw new DomainException('Content not found', 204);
         }
-
+        
         if( !in_array($schedule->status, ['pending', 'confirmed']) ) {
             return response()->json([
                 'message' =>  'This schedule cannot be canceled as its status is no longer pending or confirmed'
@@ -263,7 +269,11 @@ class ScheduleController extends Controller
         $schedule->status = 'canceled';
         $schedule->save();
 
-        // # todo: send information mail to vet and user ;
+        # todo: send information mail to vet and user ;
+        Notification::send([
+            $schedule->client,
+            $schedule->vet
+        ], new Canceled($schedule));
 
         return response()->json([
             'message' => 'Schedule successfully canceled'
